--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <a href="./">home</a>
 
-  <a href="/more-info/contact.html">về g.x</a>
+  <a href="./more-info/contact.html">về g.x</a>
 
-  <a href="/more-info/skill.html">skill</a>
+  <a href="./more-info/skill.html">skill</a>
 
   <p>
     <h1>xin chào giáo xứ hòa an</h1>
