--- a/more-info/skill.html
+++ b/more-info/skill.html
@@ -6,14 +6,14 @@
     <title>từ khi đức cha về</title>
   </head>
   <body>
-    <a href="/">home</a>
+    <a href="./">home</a>
 
     <a href="/more-info/contact.html">về g.x</a>
 
     <a href="/more-info/skill.html">từ</a>
 
     <h1>
-      Giáo họ Hoà An thuộc Giáo Xứ Mỹ Lộc – Hạt Bắc Giang vào lúc 14 giờ ngày 01
+      Giáo họ Hoà An thuộc Giáo Xứ Mỹ Lộc,Hạt Bắc Giang vào lúc 14 giờ ngày 01
       tháng 05 năm 2012, cha xứ Giuse Nguyễn Văn Khiêm và cha phụ trách Giuse
       Ngô Xuân Tín đã long trọng cử hành thánh lễ trọng thể kính Thánh Giuse Bổn
       Mạng của Giáo Họ. Nói về Thánh Giuse, chúng ta không khỏi ngỡ ngàng về con
