--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>thông tin về Giáo xứ Hòa an</title>
 </head>
 <body>
-  <a href="/">home</a>
+  <a href="./">home</a>
 
   <a href="/more-info/contact.html">về g.x</a>
 
-  <a href="/more-info/skill.html">từ</a>
+  <a href="/more-info/skill.html">skill</a>
 
   <p>
     <h1>xin chào giáo xứ hòa an</h1>
@@ -27,8 +27,8 @@
     </h3><hr>
 
     <h2>link Giáo xứ hòa an</h2>
-    <a href="https://www.giaoxugiaohovietnam.com/BacNinh/01-Giao-Phan-BacNinh-HoaAn.htm" target="_blank">link tìm hiểu nhé</a>
-    <img src="https://www.giaoxugiaohovietnam.com/BacNinh/MyLoc/HoaAn-01022013%20(2).jpg" alt="1.0"><hr>
+    <a href="https://www.giaoxugiaohovietnam.com/BacNinh/01-Giao-Phan-BacNinh-HoaAn.htm" target="_blank"><img src="https://www.giaoxugiaohovietnam.com/BacNinh/MyLoc/HoaAn-01022013%20(2).jpg" alt="1.0"></a>
+    
     <a href="/more/contact.html" target="_blank">về g.x</a>
     <h4> the end<br></h4>
 </p>
