--- a/more-info/contact.html
+++ b/more-info/contact.html
@@ -6,11 +6,11 @@
     <title>về giáo xứ</title>
   </head>
   <body>
-    <a href="/">home</a>
+    <a href="./">home</a>
 
     <a href="/more-info/contact.html">về g.x</a>
 
-    <a href="/more-info/skill.html">từ</a>
+    <a href="/more-info/skill.html">skill</a>
 
     <h1>
       Trong bài chia sẻ, Đức Cha Cosma đã nhắc lại những kỷ niệm khi đến thăm
