--- a/more-info/skill.html
+++ b/more-info/skill.html
@@ -6,7 +6,7 @@
     <title>từ khi đức cha về</title>
   </head>
   <body>
-    <a href="./index.html">home</a>
+    <a href="./">home</a>
 
     <a href="./more-info/contact.html">về g.x</a>
 
