--- a/more-info/contact.html
+++ b/more-info/contact.html
@@ -8,9 +8,9 @@
   <body>
   <a href="./">home</a>
 
-  <a href="./more-info/contact.html">về g.x</a>
+  <a href="./contact.html">về g.x</a>
 
-  <a href="./more-info/skill.html">skill</a>
+  <a href="./skill.html">skill</a>
 
     <h1>
       Trong bài chia sẻ, Đức Cha Cosma đã nhắc lại những kỷ niệm khi đến thăm
