--- a/more-info/skill.html
+++ b/more-info/skill.html
@@ -8,9 +8,9 @@
   <body>
   <a href="./">home</a>
 
-  <a href="./more-info/contact.html">về g.x</a>
+  <a href="./contact.html">về g.x</a>
 
-  <a href="./more-info/skill.html">từ</a>
+  <a href="./skill.html">từ</a>
 
     <h1>
       Giáo họ Hoà An thuộc Giáo Xứ Mỹ Lộc,Hạt Bắc Giang vào lúc 14 giờ ngày 01
