--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <a href="./more-info/contact.html">về g.x</a>
 
-  <a href="./more-info/skill.html">skill</a>
+  <a href="./more-info/skill.html">từ</a>
 
   <p>
     <h1>xin chào giáo xứ hòa an</h1>
