--- a/more-info/contact.html
+++ b/more-info/contact.html
@@ -6,7 +6,7 @@
     <title>về giáo xứ</title>
   </head>
   <body>
-  <a href="/index.html">home</a>
+  <a href="./">ty</a>
 
   <a href="./contact.html">về g.x</a>
 
