--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>thông tin về Giáo xứ Hòa an</title>
 </head>
 <body>
-  <a href="./">home</a>
+  <a href="./">ty</a>
 
   <a href="./more-info/contact.html">về g.x</a>
 
