--- a/more-info/contact.html
+++ b/more-info/contact.html
@@ -6,10 +6,8 @@
     <title>về giáo xứ</title>
   </head>
   <body>
-  <a href="./">ty</a>
-
+  <a href= "/index.html">ty</a>
   <a href="./contact.html">về g.x</a>
-
   <a href="./skill.html">từ</a>
 
     <h1>
